# aibbp

./: .dockerignore  .gitignore  ARCHITECTURE.md  Makefile  README.md  RESEARCH_PROMPT.md  backfill_finding_details.py  backfill_proxy_traffic.py  backfill_scans.py  docker-compose.yml  dump.rdb  go.mod  go.sum  json  launch_agents.sh  launch_opus_research_3targets.sh  monitor_scan.py  pyproject.toml  requirements.txt  research_prompt.md  run_all_scans.sh  run_opus_research.sh  run_sonnet_research.sh  validate_all.py  validate_deep.py  validate_findings.py  validate_unconfirmed.py  validation_results.json
ai_brain/: __init__.py  __main__.py  active_schemas.py  budget.py  config.py  context.py  coordinator.py  errors.py  models.py  orchestrator.py  rate_limiter.py  schemas.py  scope.py  solver.py  validator.py
ai_brain/active/: __init__.py  __main__.py  advanced_attacks.py  agent_c_research.py  api_server.py  auth.py  authz_orchestrator.py  (+50 more)
aibbp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmarks/: benchmark_harness.py  ci_runner.py  metrics.py  xbow_runner.py
certs/: goja-root-ca.key  goja-root-ca.pem
configs/: config.yaml
docker/: Dockerfile.active-browser  Dockerfile.ai-brain  Dockerfile.scanner
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_active_testing.down.sql  000002_active_testing.up.sql
reports/: .robinhood_tradepmr_findings.md.swp  01_linktree_sqs_injection.md  02_cronos_rpc_personal_methods.md  03_bitmex_stored_xss_chat.md  04_bitmex_segment_write_keys.md  robinhood_tradepmr_findings.md
(+198 files in other folders)
